--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-qr-reader": "^3.0.0-beta-1"
   }
 }
