--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/styles/*"],
-      "img/*":["./public/"]
+      "@img/*":["./public/"]
     }
   }
 }
