--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "firebase": "^9.17.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-qr-reader": "^3.0.0-beta-1"
   },
   "overrides": {
