--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "bootstrap": "^5.2.3",
     "firebase": "^9.17.1",
     "next": "13.1.6",
     "react": "18.2.0",
