add database e la pagina del login

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/styles/*"],
-      "@img/*":["./public/"]
+      "@img/*":["./public/*"],
+      "@database":["./src/pages/api/firestore"]
     }
   }
 }
