--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@react-hook/window-size": "^3.1.1",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
     "firebase": "^9.17.1",
@@ -17,6 +18,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-card-flip": "^1.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-qr-reader": "^3.0.0-beta-1"
