--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
     "firebase": "^9.17.1",
+    "leaflet": "^1.9.3",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -21,6 +22,7 @@
     "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-leaflet": "^4.2.0",
     "react-qr-reader": "^3.0.0-beta-1"
   },
   "browser": {
