--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-leaflet": "^4.2.0",
-    "react-qr-reader": "^3.0.0-beta-1"
+    "react-qr-reader": "^3.0.0-beta-1",
+    "zustand": "^4.3.5"
   },
   "browser": {
     "path": false,
